# milk-tracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  env.yaml  main.py  milk-tracker.code-workspace  pyproject.toml  ruff.toml
.github/workflow/: cd.yml
.github/workflows/: cd.yml  coverage.yml
assets/: journal.xlsx
milk_tracker/: config.yaml  main.py
milk_tracker/assets/: journal.template.xlsx  journal.xlsx  memories.csv
milk_tracker/controllers/: app.py
milk_tracker/css/: main.sass  table.sass
milk_tracker/lib/: auth_middleware.py  pandas_utils.py  time_utils.py
milk_tracker/middleware/: auth.py
milk_tracker/models/: data.py  meals.py  memories.py
milk_tracker/pages/: header.py  login.py  memories.py  root.py
milk_tracker/schemas/: base.py  computed.py  config.py  meal.py  memory.py
milk_tracker/tests/: test_models_memories.py  test_schemas_base.py  test_schemas_config.py  test_schemas_meal.py  test_schemas_memory.py  test_utils_time.py
milk_tracker/tests/__snapshots__/: test_models_memories.ambr
milk_tracker/utils/: pandas_utils.py  time_utils.py
scripts/: milk-tracker.conf  milk-tracker.service
